# brigadier_rs

./: CHANGELOG.md  Cargo.toml  LICENSE_APACHE  LICENSE_MIT  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: argument.rs  error.rs  lib.rs  parsers.rs  usage.rs
src/argument/: argument_impl.rs
src/parsers/: bool.rs  help.rs  literal.rs  number.rs  then.rs
src/parsers/then/: argument.rs  literal.rs
src/usage/: chain.rs  combine.rs  display.rs  prefix.rs
